--- a/EFCore/appsettings.json
+++ b/EFCore/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PictureOptions": {
+    "FileTypes": ".gif,.jpg,.jpeg,.png,.GIF,.JPG,.JPEG,.PNG,.BMP",
+    "MaxSize": 10485760,
+    "ImageBaseUrl": "D:\\dotnet\\imageServer"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;uid=sa;pwd=123456;Database=xxx;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
