--- a/EFCore/appsettings.json
+++ b/EFCore/appsettings.json
@@ -13,6 +13,6 @@
     "ImageBaseUrl": "D:\\dotnet\\imageServer"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;uid=sa;pwd=123456;Database=xxx;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;uid=sa;pwd=123456;Database=CoreNotes.AutoFac;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
